--- a/index.css
+++ b/index.css
@@ -2,31 +2,12 @@ body{
     margin: -50 0;
 }
 
-
-
-li {
-    display: inline;    
-}
-
-ul {
-    margin-top: 250px; 
-    list-style-type: none;
-}
-
-li a {
-    
-    color: white;
-    font-size: 30px;
-    text-align: center;
-    padding: 0px 130px;
-    text-decoration: none;
-}
-
 #home {
-    height: 1000px;
+    height: 900px;
+    margin: 0px;
+    padding: 0px;
     background-image: url("img/owl.jpg");
     background-size: cover;
-    ;
 }
 
 #name {
@@ -37,12 +18,43 @@ li a {
     margin-left: 100px;
 }
 
+
+#nav {
+    margin-top: 250px; 
+    list-style-type: none;
+    z-index: 2;
+}
+
+#nav li {
+    display: inline;    
+}
+
+#nav li a {
+    
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    padding: 0px 130px;
+    text-decoration: none;
+}
+
+.sticky {
+    margin-top: 10px;
+    background-color: #000;
+    position: fixed;
+    transition: 0.5s;
+    top: -250px;
+    width: 100%;
+}
+
+
+
 #page1 {
     height: 850px;
     background-image: url("img/car2.jpg");
     background-position: right top;
     background-repeat: no-repeat;
-    margin-top: -53.5px;
+
     margin-right: 0px;
     padding-left: 50px;
 }
@@ -63,31 +75,73 @@ li a {
 }
 
 #page2 {
-    height: 1000px;
-    
+    height: 850px;
 }
 #portolio_h1 {
     font-size: 80px;
     text-align: center;
+    padding-top: 100px;
 }
 
 .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-column-gap: 50px;
-
+    position: relative;
+    width: 1200px;
+    height: 400px;
+    margin: auto;
+    background: #fff;
+    
   }
 
 .grid-item {
+    position: relative;
+    width: calc(400px - 30px);
+    height: calc(400px - 30px);
+    background: #000;
+    float: left;
+    margin: 15px;
+    box-sizing: border-box;
+    overflow: hidden;
+    border-radius: 10px;
+    align-content: center;
+}
+
+.grid-container .grid-item .icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    background: #0f0;
+    transform: translate(-50%, -50%);
+    transition: 0.5s;
+    z-index: 1;
+    font-size: 80px;
     text-align: center;
-    padding: 50px 0px;
-    background-color: darkgrey;
-    font-size: 30px;
+    color: #fff;
+}
+
+.grid-container .grid-item .icon_content {
+    position: absolute; 
+    font-size: 25px;
+    padding: 5px;
+    color: #0f0;
+    text-justify: auto;
+    transition: 0.3s;
+}
+
+.grid-item:hover .icon{
+    font-size: 35px;
+}
+
+.grid-container .grid-item:hover .icon_content {
+    
+    color: #fff;
 }
 
 #page3 {
-    height: 1000px;
+    height: 700px;
     text-align: center;
+    padding-top: 10px;
 }
 
 #contact_h1 {
